--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -4,15 +4,15 @@
         <div class="portfolio-nav">
             {% if page.prevProject == "none" %}
             <span class="prev disabled"><span class="button">last project</span></span>
-            {% elsif page.prevProject == "index.html" %}
-            <span class="prev"><a class="button" href="/">last project</a></span>
+            {% elsif page.prevProject == "index" %}
+            <span class="prev"><a class="button" href="/portfolio/">last project</a></span>
             {% else %}
-            <span class="prev"><a class="button" href="/portfolio/{{ page.prevProject }}">last project</a></span>
+            <span class="prev"><a class="button" href="/portfolio/{{ page.prevProject }}/">last project</a></span>
             {% endif %}
             {% if page.nextProject == "none" %}
             <span class="next disabled"><span class="button">next project</span></span>
             {% else %}
-            <span class="next"><a class="button" href="/portfolio/{{ page.nextProject }}">next project</a></span>
+            <span class="next"><a class="button" href="/portfolio/{{ page.nextProject }}/">next project</a></span>
             {% endif %}
         </div>
         {{ content }}
